--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
         header {
             background-color: #4CAF50;
-            color: white;
+            color: purple;
             padding: 10px;
         }
         footer {
